<resources>
    <string name="app_name">Vinyls g12</string>
    <string name="tv_vinyl">Vinyl</string>
    <string name="btn_login">Log In</string>
    <string name="btn_signup">Sign Up</string>
    <string name="tv_collections">Collections</string>
    <string name="just_visit">Just visit collections</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="title_home">Albums</string>
    <string name="title_collectors">Collectors</string>
    <string name="title_musicians">Musicians</string>
    <string name="title_bands">Bands</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="drawer_toggle_description">Menu toggle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_name">Name</string>
    <string name="hint_cover_url">Cover url</string>
    <string name="hint_release_date">Release date</string>
    <string name="hint_description">Description</string>
    <string name="hint_genre">Genre</string>
    <string name="hint_record_label">Record label</string>
    <string name="txt_create_album">Clic en el botón para crear un album</string>
    <string name="btn_create_album">Create Album</string>
    <string name="title_activity_collected_albums">Collector\'s Album</string>
    <string name="hint_collected_album_price">Price</string>
    <string name="title_activity_band">BandActivity</string>
    <string name="hint_organization">Organization\'s prize</string>
</resources>